---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: ???
  Changes:
    - Simplified recipe for Sulfur lightsource
    - Removed Sulfur lightsource from Blue science recipe
  Bugfixes:
    - Fix bobs lab-2 icon #76
    - Fixed compatibility with Bob's and Angel's mods
---------------------------------------------------------------------------------------------------
Version: 1.1.10
Date: 25.6.2021
  Changes:
    - replaced cobalt with brass in t3 lab when angel smelting loaded (upcoming angels change)
    - removed legacy sp dependency from labs
  Bugfixes:
    - fixed science pack connection algorithm (should now do only meaningful connection)
    - fixed missing dependency check for bobtech in alienlab tech
    - fixed flash fuel recipe hiding (petroleum variant only when not heavy oil)
---------------------------------------------------------------------------------------------------
Version: 1.1.9
Date: 23.6.2021
  Bugfixes:
    - fixed typo in migration script
---------------------------------------------------------------------------------------------------
Version: 1.1.8
Date: 22.6.2021
  Changes:
    - swapped gold and silver plate in recipes to match availability with bobs/angels (@kiwihawk)
    - T3.5 packs (production and boblogistics) now not require T4 lab
    - production pack now requires processing unit instead of advanced circuit (to compensate for 
      lab removal)
  Bugfixes:
    - Removed some unnecessary (potentialy wrong) prerequisites, and added more mod checks
    - Removed some duplicate recipe unlocks
---------------------------------------------------------------------------------------------------
Version: 1.1.7
Date: 19.5.2021
  Changes:
    - bugfix release
  Bugfixes:
    - Hide duplicate lab and science pack recipes (@kiwihawk)
---------------------------------------------------------------------------------------------------
Version: 1.1.6
Date: 27. 1. 2021